20010929
 - (bal) move reading 'config.h' up higher.  Patch by albert chin
   <china@thewrittenword.com)

20010928
 - (djm) OpenBSD CVS sync:
   - djm@cvs.openbsd.org 2001/09/28 09:49:31
     [scard.c]
     Fix segv when smartcard communication error occurs during key load. 
     ok markus@
 - (djm) Update spec files for new x11-askpass

20010927
 - (stevesk) session.c: declare do_pre_login() before use
   wayned@users.sourceforge.net

20010925
 - (djm) Pull in auth-krb5.c from OpenBSD CVS. NB. it is not currently used.
 - (djm) Sync $sysconfdir/moduli
 - (djm) Add AC_SYS_LARGEFILE configure test
 - (djm) Avoid bad and unportable sprintf usage in compat code

20010923
 - (bal) updated ssh.c to mirror minor getopts 'extern int' formating done
   by stevesk@
 - (bal) Removed 'extern int optopt;' since it is dead wood.
 - (bal) Updated all *.specs for 2.9.9p1 and updated version.h

20010923
 - (bal) OpenBSD CVS Sync
   - markus@cvs.openbsd.org 2001/09/23 11:09:13
     [authfile.c]
     relax permission check for private key files.
   - markus@cvs.openbsd.org 2001/09/23 09:58:13
     [LICENCE]
     new rijndael implementation

20010920
 - (tim) [scard/Makefile.in] Don't strip the Java binary
 - (stevesk) sun_len, SUN_LEN() configure stuff no longer required
 - (bal) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2001/09/20 00:15:54
     [sshd.8]
     fix ClientAliveCountMax
   - markus@cvs.openbsd.org 2001/09/20 13:46:48
     [auth2.c]
     key_read returns now -1 or 1
   - markus@cvs.openbsd.org 2001/09/20 13:50:40
     [compat.c compat.h ssh.c]
     bug compat: request a dummy channel for -N (no shell) sessions + 
     cleanup; vinschen@redhat.com
   - mouring@cvs.openbsd.org 2001/09/20 20:57:51
     [sshd_config]
     CheckMail removed.  OKed stevesk@

20010919
 - (bal) OpenBSD Sync
   - markus@cvs.openbsd.org 2001/09/19 10:08:51
     [sshd.8]
     command=xxx applies to subsystem now, too
   - markus@cvs.openbsd.org 2001/09/19 13:23:29
     [key.c]